--- a/android/build.gradle
+++ b/android/build.gradle
@@ -185,4 +185,11 @@ dependencies {
   }
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  
+  // MediaPipe LLM Inference dependencies
+  implementation 'com.google.mediapipe:tasks-genai:0.10.14'
+  
+  // Coroutines support
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
 } 
