--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,11 +20,14 @@ android {
   defaultConfig {
     minSdkVersion 21
     targetSdkVersion 33
+    
+    consumerProguardFiles "proguard-rules.pro"
   }
 
   buildTypes {
     release {
       minifyEnabled false
+      consumerProguardFiles "proguard-rules.pro"
     }
     debug {
       debuggable true
@@ -45,5 +48,5 @@ repositories {
 dependencies {
   implementation 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
-  implementation "com.google.mediapipe:tasks-genai:0.10.11"
+  implementation "com.google.mediapipe:tasks-genai:0.10.24"
 }
